--- a/inst/Rmarkdown/about-MH.Rmd
+++ b/inst/Rmarkdown/about-MH.Rmd
@@ -3,14 +3,30 @@ title: "about-MH"
 output: html_document
 ---
 
-## MH-shiny: Marine Hazard web application
+## MH-shiny: <img src="images/Marine-Hazard-logo.svg" alt="logo" width="200"/> web application
 
-**MH-shiny** is an Open Source tool created within the framework of the Marine Hazard project.
+The code of **MH-shiny** is freely available on <https://github.com/costavale/MH-shiny/>. For those users who are not familiar with R, a simplified version is available at the following link: <https://costavale.shinyapps.io/MH-shiny/>
 
-The central objective of the project is the creation of an integrated system of skills on the territory able to deal with relevant aspects regarding environmental risk -- with a specific focus on the marine-coastal system -- in a modern and effective way.
+The Shiny app was created using the following packages:
 
-The results obtained, through four specific areas of action, aim at the construction of technological prototypes for the management of the hazard in the coastal marine environment in the areas of interest of the project. Marine Hazard will therefore lead to the creation of skills on the territory capable of effectively addressing relevant aspects of risk mitigation in the marine environment.
+-   *htmltools*
 
-The four specific actions of the project represent a wide range of fields of action of significant strategic interest for the development of entire supply chains of the economy of the sea being an example for the development of strategic activities in areas of mitigation and recovery of marine environments degraded by natural and anthropic impact phenomena.
+-   *leaflet*
 
-For more details about the project see <http://www.marinehazard.cnr.it>.
+-   *sf*
+
+-   *sp*
+
+-   *tidyverse*
+
+-   *shiny*
+
+-   *shinythemes*
+
+-   *DT*
+
+-   *RColorBrewer*
+
+-   *reactable*
+
+-   *wordcloud*
