add images and small updates

--- a/inst/Rmarkdown/home-MH.Rmd
+++ b/inst/Rmarkdown/home-MH.Rmd
@@ -3,13 +3,14 @@ title: "home-MH"
 output: html_document
 ---
 
-## MH-shiny: <img src="images/Marine-Hazard-logo.svg" alt="logo" width="200"/> web application   
+## MH-shiny: <img src="images/Marine-Hazard-logo.svg" alt="logo" width="200"/> web application
 
-**MH-shiny** is an Open Source tool created within the framework of the Marine Hazard project. 
+**MH-shiny** is an Open Source tool created within the framework of the Marine Hazard project.
 
 The central objective of the project is the creation of an integrated system of skills on the territory able to deal with relevant aspects regarding environmental risk -- with a specific focus on the marine-coastal system -- in a modern and effective way.
 
-The results obtained, through four specific areas of action, aim at the construction of technological prototypes for the management of the hazard in the coastal marine environment in the areas of interest of the project. Marine Hazard will therefore lead to the creation of skills on the territory capable of effectively addressing relevant aspects of risk mitigation in the marine environment.
+The results obtained, through four specific areas of action, aim at the construction of  technological prototypes for the management of the hazard in the coastal marine environment
+in the areas of interest of the project. Marine Hazard will therefore lead to the creation of skills on the territory capable of effectively addressing relevant aspects of risk mitigation in the marine environment.
 
 The four specific actions of the project represent a wide range of fields of action of significant strategic interest for the development of entire supply chains of the economy of the sea being an example for the development of strategic activities in areas of mitigation and recovery of marine environments degraded by natural and anthropic impact phenomena.
 
