--- a/inst/Rmarkdown/about-MH.Rmd
+++ b/inst/Rmarkdown/about-MH.Rmd
@@ -12,24 +12,29 @@ For those users who are not familiar with R, a simplified version is available a
 
 The Shiny app was created using the following packages:
 
--   *htmltools*, 
+-   *htmltools*, Joe Cheng, Carson Sievert, Barret Schloerke, Winston Chang, Yihui Xie and Jeff Allen (2021). htmltools: Tools for HTML. R package version 0.5.2. https://CRAN.R-project.org/package=htmltools
 
--   *leaflet*
+-   *leaflet*, Joe Cheng, Bhaskar Karambelkar and Yihui Xie (2022). leaflet: Create Interactive Web Maps with the JavaScript 'Leaflet' Library. R package version 2.1.0.   https://CRAN.R-project.org/package=leaflet
 
--   *sf*
+-   *sf*, Pebesma, E., 2018. Simple Features for R: Standardized Support for Spatial Vector Data.
+  The R Journal 10 (1), 439-446, https://doi.org/10.32614/RJ-2018-009
 
--   *sp*
+-   *sp*, Pebesma, E.J., R.S. Bivand, 2005. Classes and methods for spatial data in R. R News 5
+  (2), https://cran.r-project.org/doc/Rnews/
 
--   *tidyverse*
+-   *tidyverse*, Wickham et al., (2019). Welcome to the tidyverse. Journal of Open Source Software, 4(43), 1686, https://doi.org/10.21105/joss.01686
 
--   *shiny*
+-   *shiny*, Winston Chang, Joe Cheng, JJ Allaire, Carson Sievert, Barret Schloerke, Yihui Xie, Jeff Allen, Jonathan McPherson, Alan Dipert and Barbara Borges (2021). shiny: Web Application Framework for R. R package version 1.7.1. https://CRAN.R-project.org/package=shiny
 
--   *shinythemes*
+-   *shinythemes*, Winston Chang (2021). shinythemes: Themes for Shiny. R package version 1.2.0.
+  https://CRAN.R-project.org/package=shinythemes
 
--   *DT*
+-   *DT*, Yihui Xie, Joe Cheng and Xianying Tan (2021). DT: A Wrapper of the JavaScript Library
+  'DataTables'. R package version 0.20. https://CRAN.R-project.org/package=DT
 
--   *RColorBrewer*
+-   *RColorBrewer*, Erich Neuwirth (2014). RColorBrewer: ColorBrewer Palettes. R package version 1.1-2. https://CRAN.R-project.org/package=RColorBrewer
 
--   *reactable*
+-   *reactable*, Greg Lin (2020). reactable: Interactive Data Tables Based on 'React Table'. R package version 0.2.3. https://CRAN.R-project.org/package=reactable
 
--   *wordcloud*
+-   *wordcloud*, Ian Fellows (2018). wordcloud: Word Clouds. R package version 2.6.
+  https://CRAN.R-project.org/package=wordcloud
