add link to the shiny app

--- a/inst/Rmarkdown/home-MH.Rmd
+++ b/inst/Rmarkdown/home-MH.Rmd
@@ -7,6 +7,8 @@ output: html_document
 
 **MH-shiny** is an Open Source tool created within the framework of the Marine Hazard project.
 
+An online version of the app is accessible at <https://costavale.shinyapps.io/MH-shiny/>.
+
 The central objective of the project is the creation of an integrated system of skills on the territory able to deal with relevant aspects regarding environmental risk -- with a specific focus on the marine-coastal system -- in a modern and effective way.
 
 The results obtained, through four specific areas of action, aim at the construction of  technological prototypes for the management of the hazard in the coastal marine environment
